trunk/Archive2/e2/9176b4463e93ad/output
main.cpp:6:13: error: non-ASCII characters are not allowed outside of literals and identifiers
    cout << “Hello there world!”;
            ^
main.cpp:6:16: error: use of undeclared identifier 'Hello'
    cout << “Hello there world!”;
             ^
main.cpp:6:34: error: non-ASCII characters are not allowed outside of literals and identifiers
    cout << “Hello there world!”;
                               ^
3 errors generated.
