trunk/Archive2/e2/9176b4463e93ad/main.cpp
#include <iostream>
using namespace std;

int main()
{
    cout << “Hello there world!”;
     return 0;

}